spacing fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,8 @@ a:hover {color:#009933; text-decoration: underline;}
 
 #content {background-color: #FFF; margin-left:auto;margin-right:auto;width:800px;border-right:2px solid black; border-bottom:2px solid black; border-top:1px solid black; border-left:1px solid black;}
 
+.header {display:block;}
+
 #banner {background-color: #1FD324;font-family:Georgia, Times New Roman;font-style:italic;font-size:100%;padding-left:3px;}
 
 #nav {margin-top: 0px; margin-bottom: 5px; padding: 0; height: 20px;}
